--- a/skyfolk/templates/account/welcomestep1.html
+++ b/skyfolk/templates/account/welcomestep1.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col s12">
                 <div class="chips chips-placeholder"></div>
-                <p>Introduce una "," para añadir un nuevo interés.</p>
+                <p>Presiona intro para añadir un nuevo interés.</p>
             </div>
         </div>
         <div class="row">
