+ Fixed mixed contennt (SSL-NOTSSL)

--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -30,7 +30,7 @@
     transition: all .3s ease-in;
     -webkit-transition: all .3s ease-in;
     -moz-transition: all .3s ease-in;
-    background: #f0f0f0 url('http://d32rim3h420riw.cloudfront.net/img/search-icon.png') no-repeat 95%;
+    background: #f0f0f0 url('https://d32rim3h420riw.cloudfront.net/img/search-icon.png') no-repeat 95%;
     background-size: 13px;
     padding: 0 20px;
     color: black !important;
@@ -38,7 +38,7 @@
 }
 
 .field > form input[type=text]:focus {
-    background: #fefefe url('http://d32rim3h420riw.cloudfront.net/img/search-icon.png') no-repeat 1%;
+    background: #fefefe url('https://d32rim3h420riw.cloudfront.net/img/search-icon.png') no-repeat 1%;
     background-size: 13px;
     border-bottom: 0;
 }
@@ -282,12 +282,12 @@
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s linear;
     transition: all 0.3s linear;
-    background: #eeeeee url("http://d32rim3h420riw.cloudfront.net/img/search-icon.png") no-repeat 95%;
+    background: #eeeeee url("https://d32rim3h420riw.cloudfront.net/img/search-icon.png") no-repeat 95%;
     background-size: 13px;
 }
 
 #tab-amigos .search:focus {
-    background: #fefefe url("http://d32rim3h420riw.cloudfront.net/img/search-icon.png") no-repeat 1%;
+    background: #fefefe url("https://d32rim3h420riw.cloudfront.net/img/search-icon.png") no-repeat 1%;
     background-size: 13px;
 }
 
