--- a/skyfolk/templates/emails/follow_request.html
+++ b/skyfolk/templates/emails/follow_request.html
@@ -1,6 +1,6 @@
 {% extends "emails/base_email.html" %}
 {% block content %}
 <p>
-    ¡Hola <b>{{ to_user }}</b>! - Te avisamos de que {{ from_user }} quiere seguirte.
+    ¡Hola <b>{{ to_user }}</b>! - {{ from_user }} quiere seguirte.
 </p>
 {% endblock %}
