--- a/postman/templates/email_user.html
+++ b/postman/templates/email_user.html
@@ -1,3 +1,3 @@
 <p>
-    ¡Hola <b>{{ to_user }}</b>! - Te avisamos de que has recibido un nuevo mensaje privado de {{ from_user }}.
+    ¡Hola <b>{{ to_user }}</b>! - Has recibido un nuevo mensaje privado de {{ from_user }}.
 </p>
