--- a/skyfolk/templates/emails/new_follow_added.html
+++ b/skyfolk/templates/emails/new_follow_added.html
@@ -1,6 +1,6 @@
 {% extends "emails/base_email.html" %}
 {% block content %}
 <p>
-    ¡Hola <b>{{ to_user }}</b>! - Te avisamos de que ya eres seguidor de {{ from_user }} .
+    ¡Hola <b>{{ to_user }}</b>! - ya eres seguidor de {{ from_user }} .
 </p>
 {% endblock %}
