--- a/skyfolk/templates/emails/new_publication.html
+++ b/skyfolk/templates/emails/new_publication.html
@@ -1,6 +1,6 @@
 {% extends "emails/base_email.html" %}
 {% block content %}
 <p>
-    ¡Hola <b>{{ to_user }}</b>! - Te avisamos de que {{ from_user }} ha publicado en tu skyline.
+    ¡Hola <b>{{ to_user }}</b>! - {{ from_user }} ha publicado en tu skyline.
 </p>
 {% endblock %}
