--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -108,7 +108,8 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                             </li>
                             <li>
                                 {% if profile_interests %}
-                                <div class="interests">
+                                <div class="interests tooltipped" data-position="bottom"
+                                data-tooltip="">
                                     {% for i in profile_interests %}
                                     <span class="blue-text"><b>{{ i }}</b></span>
                                     {% endfor %}
