Mejora en pines Cambio en URL de administracion Mostrar tags restantes en card user y card group

--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -502,4 +502,7 @@ ul#vertical-menu .userView .background {
 .draggable--over {
   opacity: 0.5; }
 
+.draggable-mirror {
+  z-index: 9999; }
+
 /*# sourceMappingURL=core.css.map */
