--- a/skyfolk/templates/groups/list_group.html
+++ b/skyfolk/templates/groups/list_group.html
@@ -106,9 +106,11 @@
     </div>
     <div class="row">
         <div class="col s12 wrapper-groups">
-            {% for group in object_list %}
-                {% include "groups/item_group.html" %}
-            {% endfor %} 
+            <div class="row">
+                {% for group in object_list %}
+                    {% include "groups/item_group.html" %}
+                {% endfor %} 
+            </div>
         </div>
     </div>
 </div>
