--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -40,5 +40,5 @@
     </li>
     <li><a href="{% url 'account_logout' %}" class="subheader"><i class="material-icons">exit_to_app</i>Salir</a></li>
     <li><a class="waves-effect shortcut-keyboard"><i class="material-icons">keyboard</i>Atajos</a></li>
-    <li><a href="/blog/" class="waves-effect"><i class="material-icons">help</i>Ayuda</a></li>
+    <li><a href="/blog/" class="waves-effect"><i class="material-icons">comment</i>Blog</a></li>
 </ul>
