Privacy added to main page, fix crop back image

--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -91,6 +91,9 @@
             {% endcomment %}
             <li>
                 <div class="chip">
+                    <a class="blue-text text-darken-1" href="{% url "information:privacy" %}">Política de privacidad</a>
+                </div>
+                <div class="chip">
                     <a class="blue-text text-darken-1" href="/blog">Blog</a>
                 </div>
                 <div class="chip">
