Boton editar ok, fecha de edicion de publicacion OK

--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -1,6 +1,7 @@
 {% extends "account/base.html" %}
 
 {% block head_title %}Contacto{% endblock %}
+{% block menu %}{% endblock %}
 
 {% block content %}
     <div class="wrapper">
