--- a/photologue_groups/templates/photologue_groups/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/publication_detail.html
@@ -55,7 +55,7 @@
                                     <div class="row">
                                         <div class="parrafo comment">
                                             <p
-                                               class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
+                                               class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                                             <div class="wrp-comment">{{ node.content|safe }}</div>
                                         </div>
                                         <div class="show-more" id="show-comment-{{ node.pk }}">
