--- a/skyfolk/static/css/photo_detail.css
+++ b/skyfolk/static/css/photo_detail.css
@@ -68,8 +68,7 @@
 
 .photo-messages {
   position: relative;
-  height: 870px;
-  overflow: auto;
+  overflow: hidden;
   background: white;
   border-radius: 0.3rem;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
