--- a/skyfolk/static/sass/photo_detail.sass
+++ b/skyfolk/static/sass/photo_detail.sass
@@ -74,8 +74,7 @@ $blueskyfolk: #1e88e5
 
 .photo-messages
   position: relative
-  height: 870px
-  overflow: auto
+  overflow: hidden
   background: white
   border-radius: 0.3rem
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
