--- a/skyfolk/templates/channels/new_group_gallery_publication.html
+++ b/skyfolk/templates/channels/new_group_gallery_publication.html
@@ -27,7 +27,7 @@
                             </span>
                             {% endif %}
                         </h2>
-                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
+                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                         <div class="row publication-content">
                             <div class="parrafo comment">
                                 <div class="wrp-comment">{{ node.content|safe }}</div>
@@ -152,8 +152,3 @@
 {% endif %}
 </div>
 </div>
-<script>
-    $(document).ready(function () {
-        $('.materialboxed').materialbox();
-    });
-</script>
