--- a/skyfolk/templates/channels/new_publication.html
+++ b/skyfolk/templates/channels/new_publication.html
@@ -24,7 +24,7 @@
                             </span>
                             {% endif %}
                         </h2>
-                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
+                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                         <div class="row publication-content">
                             <div class="parrafo comment">
                                 <div class="wrp-comment">{{ node.content|safe }}</div>
