--- a/skyfolk/templates/channels/new_publication_detail.html
+++ b/skyfolk/templates/channels/new_publication_detail.html
@@ -26,7 +26,7 @@
                     <div class="row">
                         <div class="parrafo comment">
                             <p
-                            class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
+                            class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                             <div class="wrp-comment">{{ node.content|safe }}</div>
                         </div>
                         <div class="show-more" id="show-comment-{{ node.pk }}">
@@ -196,10 +196,4 @@
 </div>
 </div>
 </div>
-
 </div>
-<script>
-    $(document).ready(function () {
-        $('.materialboxed').materialbox();
-    });
-</script>
